added validators for city name and code length

--- a/src/app/pages/today/today.component.html
+++ b/src/app/pages/today/today.component.html
@@ -1,5 +1,7 @@
-<section class="auto-complete">
-	<input type="text"
-	(onAddressChange)="fetchWeatherData($event)"
-	app-places-autocomplete/>
-</section>
+<form #transWeather [formGroup]="weatherForm">
+	<section class="auto-complete">
+		<input id="searchQuery" name="searchQuery" formControlName="searchQuery" type="text"
+		(onAddressChange)="fetchWeatherData($event)"
+		app-places-autocomplete/>
+	</section>
+</form>
