--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+
+* {
+	box-sizing: border-box;
+}
+
+:focus {
+	outline: 0;
+}
+
+body {
+	font-family: 'Roboto', sans-serif;
+	margin: 0;
+	padding: 0;
+
+	--blue: #6ef1ea;
+	--dark: #222431;
+}
+
+a {
+	text-decoration: none;
+	color: var(--blue);
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+img {
+	width: 100%;
+	max-width: 100%;
+}
