updated angular, added test to search

--- a/src/app/pages/today/today.component.html
+++ b/src/app/pages/today/today.component.html
@@ -2,7 +2,7 @@
 	<form #transWeather [formGroup]="weatherForm">
 		<section class="auto-complete">
 			<input id="searchQuery" name="searchQuery" formControlName="searchQuery" type="text"
-			(onAddressChange)="fetchWeatherData($event)"
+			(onAddressChange)="checkAddress($event)"
 			app-places-autocomplete/>
 		</section>
 	</form>
