removed unused code and improve ui

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,9 @@
+<main>
 
-<header>
-	<h1>TransWeather</h1>
-	<nav>
-		<ul>
-			<li>
-				<a href="">Today</a>
-			</li>
-			<li>
-				<a href="">Forcast 4 Days</a>
-			</li>
-		</ul>
-	</nav>
-</header>
+	<header>
+		<h1>TransWeather</h1>
+	</header>
 
-<router-outlet></router-outlet>
+	<router-outlet></router-outlet>
+
+</main>
